--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </div>
 
     <footer class="footer">
-        <!-- <p class="footer__title">Arshad</p> -->
+        
         <div class="footer__social">
             <a href="https://www.linkedin.com/in/arshad-sayed19/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://www.instagram.com/arshad.films/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
             <a href="https://github.com/arshad1900" class="footer__icon"><i class='bx bxl-github' ></i></a>
         </div>
-        <p class="footer__copy">&#169; arshad. All rigths reserved</p>
+        <p class="footer__copy">&#169; Arshad Sayed | All rigths reserved</p>
     </footer>
     <script src="./script.js"></script>
 </body>
